Add edit component with ngmodel to see changes live.

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -26,6 +26,6 @@
     <animal-list [childAnimalList]="masterAnimalList" (clickSender)="editAnimal($event)"></animal-list>
   </div>
 </div>
-<!-- <div *ngIf="selectedAnimal" class="">
+<div *ngIf="selectedAnimal" class="">
   <edit-animal [childSelectedAnimal]="selectedAnimal" (doneButtonClickedSender)="doneEditing()"></edit-animal>
-</div> -->
+</div>
