--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,22 +1,37 @@
 <div class="page-header">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-3">
       <h1 class="inline">Zoo Log</h1>
     </div>
-    <div class="col-md-4 col-md-offset-2">
+    <div class="col-md-7 col-md-offset-2">
       <nav class="navbar navbar-light bg-faded">
         <form class="form-inline">
           <div class="navbar-buttons">
             <button class="btn btn-outline-success" (click)="showAnimals()" type="button">Animals</button>
             <button class="btn btn-outline-success" (click)="showAddForm()" type="button">Add Animal</button>
-            <!-- <button class="btn btn-outline-success" (click)="showYoungAnimals()" type="button">Young Animals</button>
-            <button class="btn btn-outline-success" (click)="showMatureAnimals()" type="button">Mature Animals</button> -->
+            <button class="btn btn-outline-success" (click)="showYoungAnimals()" type="button">Young Animals</button>
+            <button class="btn btn-outline-success" (click)="showMatureAnimals()" type="button">Mature Animals</button>
           </div>
         </form>
       </nav>
     </div>
   </div>
 </div>
+
+<div *ngIf="youngAnimalList" >
+  <h2>Animals under 2 Years Old:</h2>
+  <div *ngFor="let eachAnimal of masterAnimalList | young">
+    <h3>{{eachAnimal.name}} the {{eachAnimal.species}}</h3>
+  </div>
+</div>
+
+<div *ngIf="matureAnimalList" >
+  <h2>Animals over 2 Years Old:</h2>
+  <div *ngFor="let eachAnimal of masterAnimalList | mature">
+    <h3>{{eachAnimal.name}} the {{eachAnimal.species}}</h3>
+  </div>
+</div>
+
 
 <div *ngIf="animalForm" class="newKeg">
   <add-animal (clickSender)="addAnimalChild($event)"></add-animal>
