Add basic formatting on each component page.

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -33,7 +33,7 @@
 </div>
 
 
-<div *ngIf="animalForm" class="newKeg">
+<div *ngIf="animalForm" class="newAnimal">
   <add-animal (clickSender)="addAnimalChild($event)"></add-animal>
 </div>
 <div *ngIf="displayAnimals" >
