Add background color and bear image.

--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -1,3 +1,7 @@
 body {
-  background-image: url("../images/monkey.jpeg");
+  background-color: #568963;
+}
+
+.btn {
+  background-color: rgba(210, 180, 140, .7);
 }
