--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="page-header">
   <div class="row">
     <div class="col-md-3">
-      <h1 class="inline">Zoo Log</h1>
+      <h1 class="inline">Zoo Log     <img src="../resources/images/bear.png"></h1>
     </div>
     <div class="col-md-7 col-md-offset-2">
       <nav class="navbar navbar-light bg-faded">
