--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Rubik');
+
 body {
   background-color: #568963;
+  font-family: 'Rubik', sans-serif;
 }
 
 .btn {
